data/derived/sp14/progs/unify/prog1785.ml.out
Characters 27-29:
  let _ = fixpoint (collatz, 93rew001);;
                             ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
